<resources>
    <string name="app_name">Notes</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_Login">Log in</string>
    <string name="register">Register</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="todo">TODO</string>
    <string name="notes">Notes</string>
    <string name="save_your_notes_directly_on_cloud">Save your notes directly on cloud</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="content_description_search">Search</string>
    <string name="search">Search</string>
    <string name="more">more</string>
    <string name="content_description_more">more</string>
    <string name="logout">logout</string>
    <string name="heading">Heading</string>
    <string name="sample_text">
        Baby i dont understand this my heart can’t take this damage like way
    You no longer have to pay hefty rates to your phone company to be able to send
        /n
        text messages. Text messages still remain the most used medium of
        communication. The response rate and viewability of text messages

        /n far exceeds any other form of communication including e-mail.
        This is why we still rely on text messages when it comes to the most
        important and urgent communication between our friends and family.
        With the advent of messaging apps and services such as WhatsApp and Viber,
        one would have thought that SMS and texting will die soon. Contrary to common
        belief a few years ago, texting is still alive and growing. We wanted to build
        a product that enabled free texting between friends and family and with FoxText,
        we believe we have created world s best free texting app. Send a text now and see for yourself.
    </string>
    <string name="you_can_write_something_here">You can write something here</string>
    <string name="your_note">your note</string>
    <string name="baby_i_dont_understand_this">Baby i dont understand this</string>
</resources>