<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    app:cardCornerRadius="0dp"
    android:layout_marginTop="1dp"
    android:background="@color/colorPrimaryDark">
<LinearLayout
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_marker"
            android:contentDescription="@string/todo"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:id="@+id/heading"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="6dp" />
        <TextView
            android:id="@+id/subnote"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_i_dont_understand_this"
            android:layout_below="@id/heading"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="normal"
            android:maxLines="2"
            android:layout_marginStart="6dp"/>



    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:layout_gravity="center_vertical"
        android:layout_weight="10">
        <ImageView
            android:layout_marginStart="44dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/trash"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_icon_trash_bin"
            />

        <TextView
            android:id="@+id/my_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trash"
            android:layout_marginTop="12dp"
            android:text="22-oct-2020"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</LinearLayout>
</com.google.android.material.card.MaterialCardView>